--- a/style.css
+++ b/style.css
@@ -11,10 +11,7 @@
      font-weight: bold;
     margin: 3px 0px 3px 0px;
     font-style: italic;
-    padding: 3px;
-
-    
-    
+    padding: 3px;  
 }
 strong{
     font-weight: bold;
@@ -45,6 +42,11 @@ h1{
     margin-inline-end: 0px;
     font-weight: bold;
     font-style: italic;
+}
+#b1 span{
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
 }
 #mb-2{
     border: 3px solid red;
