--- a/style.css
+++ b/style.css
@@ -44,9 +44,11 @@ h1{
     font-style: italic;
 }
 #b1 span{
-    color: black;
-    font-size: 25px;
+    color: white;
+    font-size: 2em;
     font-weight: bold;
+    padding: 4px;
+    
 }
 #mb-2{
     border: 3px solid red;
